[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reebundle"
version = "0.1.2"
description = "A package for creating Reeb graphs for diffusion MRI tractography"
authors = [
    { name="S Shailja"},
    { name="V. Bhagavatula"},
    { name="M. Cieslak"},
    { name="J. M. Vettel,"},
    { name="S. T. Grafton"},
    { name="B. S. Manjunath"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/s-shailja/reebundle"
Documentation = "https://github.com/s-shailja/reebundle"
Issues = "https://github.com/s-shailja/reebundle/issues"

[project.optional-dependencies]
test = [
  "pytest"
]

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", ".venv"]
