[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reebundle"
version = "0.1.2"
description = "A package for creating Reeb graphs for diffusion MRI tractography"
authors = [
    { name="S Shailja"},
    { name="V. Bhagavatula"},
    { name="M. Cieslak"},
    { name="J. M. Vettel,"},
    { name="S. T. Grafton"},
    { name="B. S. Manjunath"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "dipy",
    "plotly",
    "matplotlib",
    "networkx",
    "nibabel",
    "numpy",
    "pandas",
    "seaborn",
    "jupyterlab"
]

[project.urls]
Homepage = "https://github.com/s-shailja/reebundle"
Documentation = "https://github.com/s-shailja/reebundle"
Issues = "https://github.com/s-shailja/reebundle/issues"

[project.optional-dependencies]
test = [
  "pytest"
]
dev = [
  "pytest",
  "maturin>=1.0,<2.0"
]

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
module-name = "reebundle.rust"
binding = "pyo3"

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", ".venv"]
